# emon32-fw

./: .gitignore  CONTRIBUTORS.md  Makefile  README.md  SERIAL_COMMANDS.md
assets/: interfacers
docs/: configuration.md  firmware.md  hardware.md
rust-poc/: .gitignore  ABX00003-full-pinout.pdf:Zone.Identifier  ARDUINO_ZERO_FINAL_GUIDE.md  ARDUINO_ZERO_VALIDATION.md  ARM_PERFORMANCE_TESTING.md  BUILD_SCRIPT_CONSOLIDATION_COMPLETE.md  CLEANUP_SUMMARY.md  Cargo.toml  FAST_MATH_ANALYSIS.md  FIRMWARE_UPLOAD_GUIDE.md  FTDI_CONNECTION_GUIDE.md  FUTURE_INTEGRATION_COMPLETE.md  GITIGNORE_UPDATE_COMPLETE.md  HARDWARE_UART_INTEGRATION_COMPLETE.md  LEGACY_BUILD_REMOVAL_COMPLETE.md  MICROMATH_PERFORMANCE_SUCCESS.md  MICROMATH_TEST_FIX.md  OLD_FILES_MANAGEMENT_COMPLETE.md  OSCILLOSCOPE_VALIDATION.md  PERFORMANCE_DOCUMENTATION_GUIDE.md  PERFORMANCE_REALITY_CHECK.md  PERFORMANCE_RESULTS_TEMPLATE.md  PERFORMANCE_TESTING_GUIDE.md  PERFORMANCE_TESTS_SUMMARY.md  PROGRESS_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  QFPLIB_INTEGRATION_COMPLETE.md  QFPLIB_INTEGRATION_SUMMARY.md  QFPLIB_LTO_PERFORMANCE_VALIDATION.md  QFPLIB_OPTIMIZATION_COMPLETE.md  QFPLIB_PERFORMANCE_ANALYSIS.md  QFPLIB_SYS_INTEGRATION_COMPLETE.md  README.md  RTIC_EXPLAINED.md  RTIC_INTEGRATION.md  RTIC_SUCCESS.md  SIGLENT_VALIDATION_GUIDE.md  UART_IMPLEMENTATION_COMPLETE.md  VERIFICATION_COMPLETE.md  (+37 more)
rust-poc/.cargo/: config.toml
rust-poc/build_scripts_archive/: README.md  build_and_test_comparison.sh  build_debug.sh  build_lto_performance.sh  build_qfplib.sh  build_qfplib_sys.sh  build_uart_demo.sh  build_uart_hardware.sh
rust-poc/examples/: simulate.rs
rust-poc/qfplib-sys/: Cargo.toml  build.rs
rust-poc/qfplib-sys/src/: lib.rs
rust-poc/src/: lib.rs  main.rs  main_debug.rs  main_hybrid_performance.rs  main_performance_test_simple.rs  main_qfplib_complex_performance.rs  main_qfplib_debug.rs  main_qfplib_performance.rs  main_qfplib_simple_test.rs  main_rtic.rs  main_rtic_debug.rs  main_rtic_simple.rs  main_rtic_uart.rs  main_rtic_uart_hardware.rs  main_rtic_working.rs  main_uart.rs  main_uart_hardware.rs  uart.rs
rust-poc/src/board/: mod.rs  pins.rs
rust-poc/src/energy/: calculator.rs  mod.rs
rust-poc/src/math/: mod.rs
rust-poc/tests/: integration_tests.rs
scripts/: flash-emontx6.sh
src/: asm_math.h  asm_math.s  board_api.h  board_def.h  configuration.c  configuration.h  dataPack.c  dataPack.h  driver_ADC.c  driver_DMAC.c  driver_DMAC.h  driver_PORT.c  driver_PORT.h  driver_SERCOM.c  driver_SERCOM.h  driver_TIME.c  driver_USB.c  eeprom.c  eeprom.h  emon32.c  emon32.h  emon_CM.c  emon_CM.h  emon_CM_coeffs.h  periph_DS18B20.c  periph_DS18B20.h  periph_SSD1306.c  periph_SSD1306.h  periph_rfm69.c  periph_rfm69.h  pulse.c  pulse.h  startup_samd21.c  temperature.c  temperature.h  tusb_config.h  usb_descriptors.c  util.c  util.h
tests/: Makefile  Makefile.asm_math  emonCM_test.h  test_asm_math.c  test_asm_math_target.c  test_cm.c
